--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,9 +29,12 @@ export(get_dec_hor)
 export(get_dom_conso_proj)
 export(get_durable)
 export(get_ener)
+export(get_ener_var_3Me)
+export(get_ener_var_Matisse)
 export(get_house_proj)
 export(get_income)
 export(get_income_proj)
+export(get_intermed_spend_aggr)
 export(get_men_elast_df)
 export(get_men_proj)
 export(get_parc_auto)
@@ -45,6 +48,7 @@ export(get_taxe_proj)
 export(get_taxes)
 export(get_threeme_data)
 export(get_vehic)
+export(get_work_proj)
 export(initialize_MatisseFiles)
 export(initialize_MatisseLibraries)
 export(initialize_MatisseParams)
@@ -63,6 +67,19 @@ export(project_taxes)
 export(remove_item)
 export(replace_nan)
 export(reweight_population)
+export(summarise_agecat)
+export(summarise_auto_count)
+export(summarise_auto_replace)
+export(summarise_demography)
+export(summarise_enerphys_gini)
+export(summarise_enerphys_quartile)
+export(summarise_house_renov)
+export(summarise_house_surf)
+export(summarise_poverty)
+export(summarise_sensi_ener)
+export(summarise_taxes_split)
+export(summarise_unemployment)
+export(summary_mean_elast)
 export(transform_final_data)
 export(update_DPE)
 export(ventilate_solde)
